--- a/components/nav/Nav.module.css
+++ b/components/nav/Nav.module.css
@@ -1,27 +1,15 @@
-.container{
-  
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    width: 100%;
-    margin-top: 30px; ; 
-    
-    
-  }
-  
-  .container input{
-      height: 30px;
-      width: 300px;
-      background-color: whitesmoke;  
-      border-radius: 5px;
-      box-shadow: 10px 10px 5px 0px rgba(224, 248, 4, 0.75);
-  
-  }
-  
-  .container button{
-      background-color: rgb(255, 30, 0) ;
+
+  .nav button{
+      background-color: rgba(26, 214, 120, 0.932) ;
       margin-left: 5px;
       border-radius: 5px;
       color: black;
-      box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+      //box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   }
+
+  .nav button:hover {
+    background-color:rgb(255, 30, 0);
+    //box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.5);
+    //transition: 0.5;
+  }
+  
