--- a/components/searchBar/Searchbar.module.css
+++ b/components/searchBar/Searchbar.module.css
@@ -29,8 +29,8 @@
 }
 
 .container button:hover {
-  background-color:rgb(255, 123, 0);
-  //box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.5);
-  //transition: 0.5;
+  background-color: rgb(255, 30, 0);
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.5);
+  transition: 0.5;
 }
 
